[package]
name = "neuron"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2018"

[dependencies]
num = "0.2.1"
specs = "0.16.1"
specs-derive = "0.4.0"
rayon = "1.3.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
rand = "0.6.4"
serde = "1.0.118"
serde_derive = "1.0.105"
serde_yaml = "0.8.11"

[profile.release]
debug = true