[package]
name = "neuron"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2018"

[dependencies]
num = "0.4.0"
specs = "0.17.0"
specs-derive = "0.4.0"
rayon = "1.4.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_yaml = "0.8.23"

[profile.release]
debug = true